<resources>
    <string name="facebook_address">https://www.facebook.com/X-Bank-378694379633392</string>
    <string name="facebook_address_short">facebook.com/X-Bank</string>
    <string name="web_address">http://www.xbank.hu</string>
    <string name="email_address">info@xbank.com</string>
    <string name="headquarter_address">1013 Budapest, Lánchíd utca 2.</string>
    <string name="phone_number">+36-20-289-0955</string>
    <string name="app_name">X Bank</string>
    <string name="enterToMobilbank">Enter to Mobilbank</string>
    <string name="selectLanguage">Select language</string>
    <string name="branchAndAtmList">Branch- and ATM list</string>
    <string name="rateOfExchange">Exchange rates</string>
    <string name="contact">Contacts</string>
    <string name="information">Information</string>
    <string name="text_select_language">Select language:</string>
    <string name="text_english">English</string>
    <string name="text_hungarian">magyar</string>
    <string name="text_proceed">Submit</string>
    <string name="text_enter">Enter</string>
    <string name="text_enter_pin_code">Enter PIN code:</string>
    <string name="text_enter_your_id">Enter your ID:</string>
    <string name="text_not_logged_in">You are NOT logged in!</string>
    <string name="text_logged_in">You are logged in!</string>
    <string name="text_wrong_pin_code">Access denied!</string>
    <string name="text_logout">Log out</string>
    <string name="text_pin_code_rule">PIN code must be between 4 and 6 digits!</string>
    <string name="text_id_code_rule">ID must be 8 digits!</string>
    <string name="text_banned_1">You have to wait "</string>
    <string name="text_banned_2"> seconds!"</string>
    <string name="welcomeText_1">X Bank ..."</string>
    <string name="welcomeText_2">... your future bank!"</string>
    <string name="text_confirm_exit">Are you sure you want to log out?"</string>
    <string name="currency">Currency"</string>
    <string name="foreign_currency">Foreign currency"</string>
    <string name="text_date">Date:"</string>
    <string name="text_buy">Buy</string>
    <string name="text_sell">Sell</string>
    <string name="tab">\u0009\u0009\u0009\u0009</string>
    <string name="opening_hours">Opening hours"</string>
    <string name="text_branches">Branches"</string>
    <string name="text_atms">ATM-s"</string>
    <string name="atm_type">ATM type"</string>
    <string name="open">Open"</string>
    <string name="closed">Closed"</string>
    <string name="forint">Forint"</string>
    <string name="euro">EUR"</string>
    <string name="email_us">Write us an email:"</string>
    <string name="call_us">Call us:"</string>
    <string name="facebook">Watch us on the Facebook:"</string>
    <string name="homepage">Visit our homepage:"</string>
    <string name="headquarter">Headquarter:"</string>
    <string name="text_phone_permission">Please grant the permission to call!"</string>
    <string name="email_subject">Information request"</string>
    <string name="email_app_chooser_text">Choose an app:"</string>
    <string name="yes">Yes"</string>
    <string name="no">No"</string>
    <string name="monday">Monday"</string>
    <string name="tuesday">Tuesday"</string>
    <string name="wednesday">Wednesday"</string>
    <string name="thursday">Thursday"</string>
    <string name="friday">Friday"</string>
    <string name="saturday">Saturday"</string>
    <string name="sunday">Sunday"</string>
    <string name="TitleMainmenu">Main menu"</string>
    <string name="TitleLogin">Login"</string>
    <string name="TitleSelectLanguage">Language selection"</string>
    <string name="TitleBranchAndAtm">Branches and ATMs"</string>
    <string name="TitleExchangeRates">Exchange rates"</string>
    <string name="TitleContacts">Contacts"</string>
    <string name="TitleInformation">Information"</string>
    <string name="TitleNetBankMain">Overview</string>
    <string name="TitleBankAccountBalance">Account balance"</string>
    <string name="TitleCreditcards">Credit cards"</string>
    <string name="TitlePinCodeChange">PIN code change</string>
    <string name="TitleTransferMoneyOneTime">One-time transfer</string>
    <string name="TitleTransferMoneyRecurring">New recurring transfer</string>
    <string name="TitleRecurringTransfers">Recurring transfers</string>
    <string name="TitleEditRecurringTransfers">Edit recurring transfer</string>
    <string name="TitleBankAccountHistory">Account history"</string>
    <string name="TitleBankAccountStatements">Account statements"</string>
    <string name="TitleSavings">Savings"</string>
    <string name="TitleSavingsNew">New saving"</string>
    <string name="TitleBeneficiaries">Beneficiaries"</string>
    <string name="TitleNewBeneficiary">New beneficiary"</string>
    <string name="TitleEditBeneficiary">Edit beneficiary"</string>
    <string name="SortByAddress">Sort by address"</string>
    <string name="SortByDistance">Sort by distance"</string>
    <string name="text_forward">Submit</string>
    <string name="really_exit">Are you sure you want to exit?</string>
    <string name="use_your_fingerprint">Or use your fingerprint</string>
    <string name="back_button_double_press">Please click BACK again to exit!</string>
    <string name="updated_on">Updated on</string>
    <string name="refresh_rates">Refresh rates</string>
    <string name="EUR">Euro</string>
    <string name="USD">US Dollar</string>
    <string name="GBP">British Pound</string>
    <string name="AUD">Australian Dollar</string>
    <string name="BGN">Bulgarian Lev</string>
    <string name="CAD">Canadian Dollar	</string>
    <string name="CHF">Swiss Franc</string>
    <string name="CZK">Czech Koruna	</string>
    <string name="DKK">Danish Krone	</string>
    <string name="HRK">Croatian Kuna</string>
    <string name="JPY">Japanese Yen	</string>
    <string name="NOK">Norwegian Kroner</string>
    <string name="PLN">Polish Zloty	</string>
    <string name="RON">Romanian New Lei</string>
    <string name="RSD">Serbian Dinar</string>
    <string name="RUB">Russian Rouble</string>
    <string name="SEK">Swedish Krona</string>
    <string name="text_remove">Remove entered Id?</string>
    <string-array name="mobilebank_mainmenu_list">
        <item>Balance query</item>
        <item>One-time transfer</item>
        <item>Recurring transfers</item>
        <item>Savings</item>
        <item>Account history</item>
        <item>Account statements</item>
        <item>Manage credit cards</item>
        <item>Change PIN code</item>
    </string-array>
    <string name="account">account</string>
    <string name="welcome">Welcome</string>
    <string name="validto">Valid to</string>
    <string name="balance">Balance</string>
    <string name="enter_current_pincode">Enter current PIN code:</string>
    <string name="enter_new_pincode">Enter new PIN code:</string>
    <string name="re_enter_new_pincode">Re-enter new PIN code:</string>
    <string name="beneficiary_name">Name of beneficiary:</string>
    <string name="target_account">Target account:</string>
    <string name="amount_to_be_transfered">Amount to be transfered:</string>
    <string name="comments_on_order">Comments on order:</string>
    <string name="order_date">Order date:</string>
    <string name="source_account">Source account:</string>
    <string name="transfer_ok">Transfer sent succesfully!</string>
    <string name="transfer_not_ok">Transfer was not sent succesfully!</string>
    <string name="notenoughmoney">There is no enough money on this account !</string>
    <string name="recurring_transfer_ok">Recurring transfer recorded succesfully!</string>
    <string name="recurring_transfer_not_ok">Error while recording order!</string>
    <string name="modification_ok">Modification was succesfull!</string>
    <string name="modification_not_ok">Modification wasn\'t succesfull!</string>
    <string name="frequency_of_transfer">Frequency of transfer:</string>
    <string name="frequency_of_transfer_day">On:</string>
    <string-array name="recurring_transfers_frequency">
        <item> </item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
    </string-array>
    <string-array name="recurring_transfers_days_for_weeks">
        <item> </item>
        <item>on Mondays</item>
        <item>on Tuesdays</item>
        <item>on Wednesdays</item>
        <item>on Thursdays</item>
        <item>on Fridays</item>
        <item>on Saturdays</item>
        <item>on Sundays</item>
    </string-array>
    <string-array name="recurring_transfers_days_for_months">
        <item> </item>
        <item>on the 1st</item>
        <item>on the 2nd</item>
        <item>on the 3rd</item>
        <item>on the 4th</item>
        <item>on the 5th</item>
        <item>on the 6th</item>
        <item>on the 7th</item>
        <item>on the 8th</item>
        <item>on the 9th</item>
        <item>on the 10th</item>
        <item>on the 11th</item>
        <item>on the 12th</item>
        <item>on the 13th</item>
        <item>on the 14th</item>
        <item>on the 15th</item>
        <item>on the 16th</item>
        <item>on the 17th</item>
        <item>on the 18th</item>
        <item>on the 19th</item>
        <item>on the 20th</item>
        <item>on the 21st</item>
        <item>on the 22nd</item>
        <item>on the 23rd</item>
        <item>on the 24th</item>
        <item>on the 25th</item>
        <item>on the 26th</item>
        <item>on the 27th</item>
        <item>on the 28th</item>
        <item>on the 29th</item>
        <item>on the 30th</item>
        <item>on the 31st</item>
    </string-array>
    <string-array name="recurring_transfers_days_empty">
        <item> </item>
    </string-array>
    <string name="name_of_recurring_transfer">Recurring transfer\'s name:</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="Balance_query">Balance query</string>
    <string name="One_time_transfer">One-time transfer</string>
    <string name="Recurring_transfers">Recurring transfers</string>
    <string name="Savings">Savings</string>
    <string name="Account_history">Account history</string>
    <string name="Account_statements">Account statements</string>
    <string name="Beneficiaries">Beneficiaries"</string>
    <string name="Manage_credit_cards">Manage credit cards</string>
    <string name="Change_PIN_code">Change PIN code</string>
    <string name="last_login">Last login:</string>
    <string name="no_internet_connection">There is no internet connection!</string>
    <string name="no_active_account">You don\'t have any active bank account!!</string>
    <string name="delete_statement">Delete statement from phone?</string>
    <string name="statement_deleted">Statement deleted!</string>
    <string name="downloaded">Downloaded</string>
    <string name="download_statement">Download statement</string>
    <string name="account_number">Account number:</string>
    <string name="reference_number">Reference number:</string>
    <string name="deutsch">Deutsch</string>
    <string name="transaction_details">Transaction details</string>
    <string name="transaction_type">Transaction type:</string>
    <string name="direction">Direction:</string>
    <string name="amount_2">Amount:</string>
    <string name="partner_name">Partner\'s name:</string>
    <string name="partner_number">Partner\'s account number:</string>
    <string name="comment">Comment:</string>
    <string name="arrived_on">Arrived on:</string>
    <string name="x_bank">X Bank</string>
    <string name="statement_date">Statement\'s date:</string>
    <string name="filename">File name</string>
    <string name="deposit">Deposit</string>
    <string name="transfer_fee">Transfer fee</string>
    <string name="overview">Overview</string>
</resources>