<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionDetailsActivity"
    android:background="@drawable/dialog_custom_layout_green"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/transaction_details"
        style="@style/DetailsViews_Header"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/palegrey1">

        <View android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_shadow_height"
            android:background="@drawable/toolbar_dropshadow"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/XBank_Frame_3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/TextViewBankAccountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_1"
                android:text="@string/account_number"/>

            <TextView
                android:id="@+id/TextViewBankAccountNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_2c"
                android:text="12345678-12345678-90123456"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            style="@style/DetailsViews_Divider"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextViewAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/DetailsViews_TextView_1"
                    android:text="@string/amount_2"/>

                <TextView
                    android:id="@+id/TextViewAmount2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/DetailsViews_TextView_2a"
                    android:text="1.000.000"/>

                <TextView
                    android:id="@+id/TextViewCurrency2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/DetailsViews_TextView_2b"
                    android:text="@string/forint"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/DetailsViews_Divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_1"
                android:text="@string/transaction_type"/>

            <TextView
                android:id="@+id/TextViewType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_2a"
                android:text="@string/transfer_fee"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            style="@style/DetailsViews_Divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_1"
                android:text="@string/direction"/>

            <TextView
                android:id="@+id/TextViewDirection2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_2a"
                android:text="@string/deposit"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            style="@style/DetailsViews_Divider"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewPartnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_1"
                android:text="@string/partner_name"/>

            <TextView
                android:id="@+id/TextViewPartnerName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_2a"
                android:text="Firstname Lastname"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            style="@style/DetailsViews_Divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewPartnerAccountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_1"
                android:text="@string/partner_number"/>

            <TextView
                android:id="@+id/TextViewPartnerAccountNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_2c"
                android:text="12345678-90123456-78901234"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            style="@style/DetailsViews_Divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_1"
                android:text="@string/comment"/>

            <TextView
                android:id="@+id/TextViewComment2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_2a"
                android:text="szöveg"/>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            style="@style/DetailsViews_Divider"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextViewReferenceNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/DetailsViews_TextView_1"
                    android:text="@string/reference_number"/>

                <TextView
                    android:id="@+id/TextViewReferenceNumber2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/DetailsViews_TextView_2a"
                    android:text="123456789"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/DetailsViews_Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewArrivedOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_1"
                android:text="@string/arrived_on"/>

            <TextView
                android:id="@+id/TextViewArrivedOn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsViews_TextView_2a"
                android:text="2019-12-31"/>

        </LinearLayout>




    </LinearLayout>
</LinearLayout>
</LinearLayout>