<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/palegrey1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/palegreen1">

        <TextView
            android:id="@+id/TextViewHeader"
            android:text="@string/x_bank"
            android:textSize="24sp"
            android:padding="12dp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white"/>

    </RelativeLayout>
    <View android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_dropshadow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/palegrey1"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/really_exit"
            android:textAlignment="center"
            android:layout_margin="8dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextViewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Lorem ipsum dolor sit amet..."
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="14sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/rounded_button_1"
                android:minWidth="60dp"
                android:minHeight="30dp"
                android:text="@string/yes"
                android:textSize="12sp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"

                android:background="@drawable/rounded_button_1"
                android:minWidth="60dp"
                android:minHeight="30dp"
                android:padding="6dp"
                android:text="@string/no"
                android:textSize="12sp"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>